--- a/client/utsa.css
+++ b/client/utsa.css
@@ -7,9 +7,6 @@
   color:black;
   position: relative;
   left: -20px;
-
-
-
 }
 
 .normalcolorbg {
@@ -45,92 +42,125 @@
   margin-left: 2em;
 }
 
+
 /* JS 11/7/13 - design improvements for sidebar */
+#indexbutton {
+    position: relative;
+    float: left;
+    margin: 5px 0 5px 30px;
+    border: 1px solid #2e2f33;
+    border-radius: 3px;
+    box-shadow: inset 0 0 2px rgba(255, 255, 255, 0.2);
+    width: 98px;
+    height: 25px;
+    background: #4b5155;
+    padding: 5px 0 0;
+    color: #8f969a;
+    text-align: center;
+    font-size: 12px;
+    text-shadow 0 -1px 0 rgba(0,0, 0, 0.2);
+    }
 
-#indexcss {
-position: relative;
-float: left;
-margin: 5px 0 5px 30px !important;
-border: 1px solid #2e2f33 !important;
-border-radius: 3px !important;
-box-shadow: inset 0 0 2px rgba(255, 255, 255, 0.2) !important;
-width: 98px !important;
-height: 25px !important;
-background: #4b5155 !important;
-padding: 5px 0 0 !important;
-color: #8f969a !important;
-text-transform: uppercase !important;
-text-align: center !important;
-font-size: 12px !important;
-text-shadow 0 -1px 0 rgba(0,0, 0, 0.2) !important;
-	}
-
-#aboutcss {
-position: relative;
-left: 1px;
-float: left;
-margin: 5px 0 5px 0px !important;
-border: 1px solid #2e2f33 !important;
-border-radius: 3px !important;
-box-shadow: inset 0 0 2px rgba(255, 255, 255, 0.2) !important;
-width: 98px !important;
-height: 25px !important;
-background: #4b5155 !important;
-padding: 5px 0 0 !important;
-color: #8f969a !important;
-text-transform: uppercase !important;
-text-align: center !important;
-font-size: 12px !important;
-text-shadow 0 -1px 0 rgba(0,0, 0, 0.2) !important;
-	}
+#aboutbutton {
+    position: relative;
+    left: 1px;
+    float: left;
+    margin: 5px 0 5px 0px;
+    border: 1px solid #2e2f33;
+    border-radius: 3px;
+    box-shadow: inset 0 0 2px rgba(255, 255, 255, 0.2);
+    width: 98px;
+    height: 25px;
+    background: #4b5155;
+    padding: 5px 0 0;
+    color: #8f969a;
+    text-align: center;
+    font-size: 12px;
+    text-shadow 0 -1px 0 rgba(0,0, 0, 0.2);
+    }
 
 a#refDate {
-	z-index: 1;
-	margin-left: 25px;
-	padding: 0;
-	height: 20px;
-	line-height: 20px;
-	font-size: 11px;
-	font-weight: normal;
-	letter-spacing: 1px;
-	text-transform: uppercase;
-	text-align: center;
-	color: #f47321;
-	text-shadow: 0 -px 1px #000;
-	position: relative;
-	}
+    z-index: 1;
+    margin-left: 25px;
+    padding: 0;
+    height: 20px;
+    line-height: 20px;
+    font-size: 11px;
+    font-weight: normal;
+    letter-spacing: 1px;
+    text-align: center;
+    color: #f47321;
+    text-shadow: 0 -px 1px #000;
+    position: relative;
+    }
 
-	.indexlistbg {
-	position: absolute;
-	background-color: #f47321;
-	color: black;
-	margin-top: 150px;
-	margin-left: -20px;
-	font-size: 12px;
-	}
+a#changetimebutton {
+    position: relative;
+    margin: 5px 0 5px 30px;
+    border: 1px solid #2e2f33;
+    border-radius: 3px;
+    box-shadow: inset 0 0 2px rgba(255, 255, 255, 0.2);
+    width: 98px;
+    height: 10px;
+    background: #4b5155;
+    padding: 5px 0 0;
+    color: #8f969a;
+    text-align: center;
+    font-size: 6px;
+    text-shadow 0 -1px 0 rgba(0,0, 0, 0.2);
+    }
 
-	a#sifterlogo {
-	position: relative;
-	top: 4px;
-	letter-spacing:20px;
-	margin-left: 30px;
-	font: bold 15px helvetica;
-	color: #f47321;
+a#feedbackbutton {
+    position: relative;
+    margin: 5px 0 5px 30px;
+    border: 1px solid #2e2f33;
+    border-radius: 3px;
+    box-shadow: inset 0 0 2px rgba(255, 255, 255, 0.2);
+    width: 98px;
+    height: 10px;
+    background: #4b5155;
+    padding: 5px 0 0;
+    color: #8f969a;
+    text-align: center;
+    font-size: 6px;
+    text-shadow 0 -1px 0 rgba(0,0, 0, 0.2);
+    }
 
-	}
+.indexlistbg {
+    position: absolute;
+    background-color: #f47321;
+    color: black;
+    margin-top: 160px;
+    margin-left: -20px;
+    font-size: 12px;
+    }
 
-	.sifterandtime {
-	background-color:#051e42;
-	height: 40px;
-	}
+a#sifterlogo {
+    position: relative;
+    top: 4px;
+    letter-spacing:20px;
+    margin-left: 30px;
+    font: bold 15px helvetica;
+    color: #f47321;
 
-	a#indexlogo {
-	position: relative;
-	top: 40px;
-	margin-left: 30px;
-	font: bold 15px helvetica;
-	color: white;
+    }
 
-	}
+.sifterandtime {
+    background-color:#051e42;
+    height: 40px;
+    }
 
+a#indexlogo {
+    position: relative;
+    /*top: 20px;*/
+    margin-left: 30px;
+    font: bold 15px helvetica;
+    color: white;
+     text-transform: uppercase;
+    }
+
+/* temporary fix for positioning when less than max size issue */
+body {
+    min-width: 1800px;
+}
 
